# utfcaseconv

./: .clang-format  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_testing_data.h  catch2_wrapper.h  icu_utf8_bench.cpp  icu_utf8_casemap_bench.cpp  utf32_bench.cpp  utf8_bench.cpp  utfcaseconv_utf32_bench.cpp  utfcaseconv_utf8_bench.cpp
include/: utf32.h  utf32caseconv.h  utf8.h  utf8_constants.h
include/utfcaseconv/: platform.h  sse.h  utf32.h  utf8.h  utf8_constants.h
tests/: CMakeLists.txt  catch2_wrapper.h  codepoint_utf8_test.cpp  tolower_test.cpp  tolower_utf32_test.cpp  tolower_utf8_test.cpp  toupper_test.cpp  toupper_utf32_test.cpp  toupper_utf8_test.cpp
tools/: gentables.py
